# libcumat

./: .gitignore  CMakeLists.txt  Core  README.md  main.cpp
cmake/: FindNVRTC.cmake  libcumatConfig.cmake.in  libcumatUninstall.cmake
example/: CMakeLists.txt  example.cpp  example01_instantiation.cpp  example02_print.cpp  example03_access.cpp  example04_matrix_expressions.cpp  example05_transpose.cpp  example06_matrix_modification.cpp  example07_math.cpp
inc/: libcumat.cu  libcumat.h  libcumat_binaryop.h  libcumat_binaryopexpression.h  libcumat_constreference.inl  libcumat_cudahandler.h  libcumat_cudahandler.inl  libcumat_expression.h  libcumat_forwarddeclarations.h  libcumat_math.h  libcumat_matrix.cu  libcumat_matrix.h  libcumat_matrix.inl  libcumat_matrixproduct.h  libcumat_operators.h  libcumat_reference.h  libcumat_reference.inl  libcumat_transpose.h  libcumat_typestring.h  libcumat_unaryop.h  libcumat_unaryopexpression.h
include/: libcumat.h
include/src/: libcumat_binaryop.h  libcumat_binaryopexpression.h  libcumat_constreference.h  libcumat_constreference.inl  libcumat_cudahandler.h  libcumat_cudahandler.inl  libcumat_expression.h  libcumat_forwarddeclarations.h  libcumat_math.h  libcumat_matrix.h  libcumat_matrix.inl  libcumat_matrixproduct.h  libcumat_objectcounter.h  libcumat_reference.h  libcumat_reference.inl  libcumat_transpose.h  libcumat_typestring.h  libcumat_unaryop.h  libcumat_unaryopexpression.h
include/src/util/: identity_matrix.h
src/: libcumat_binaryopexpression.h  libcumat_constreference.h  libcumat_reference.h  libcumat_unaryopexpression.h
test/: CMakeLists.txt  assignment.cpp  catch_main.cpp  copy.cpp  expressions.cpp  extrema.cpp  fill.cpp  identity.cpp  instantiation.cpp  math.cpp  matrix_basics.cpp  matrix_instantiation.cpp  matrix_multiplication.cpp  norm.cpp  object_counter.cpp  resize.cpp  sum.cpp  swap.cpp  transpose.cpp
test/catch/: catch.hpp
test/util/: CPUMatrix.hpp  GPUCompare.hpp
